# agent_skills_pdev_day_code

./: AGENTS.md  PLAN__lmstudio_conversion.md  README.md  a_prompt.md  agent_example.py  agent_skill_usage_example.py  pyproject.toml  work.md
skills/: SKILLS.md  agent_example.py  parse_pdf.py
skills/pdf-parsing/: parse_pdf.py
